[gd_scene load_steps=2 format=3 uid="uid://dt2s4ruqx0em4"]

[ext_resource type="Script" path="res://Attack Area.gd" id="1_y231l"]

[node name="Attack Area" type="Area2D"]
script = ExtResource("1_y231l")

[node name="attack  speed" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="attack  speed" to="." method="_on_attack__speed_timeout"]
